# mjpeg

bbinfo/: bits.h  (+4 more)
libmovtar/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.movtar.implement  aclocal.m4  acon.sh  autogen.sh  config.cache  config.status  configure  configure.in  movtar-config  movtar-config.in  movtar.c  movtar.h  movtar.m4  movtar_index.c  movtar_play.c  movtar_setinfo.c  movtar_split.c  movtar_unify.c  movtar_yuv422.c  tar.c
libmovtar/.deps/: movtar.P  movtar_index.P  movtar_play.P  movtar_setinfo.P  movtar_split.P  movtar_unify.P  movtar_yuv422.P  tar.P
libmovtar/rtjpeg/: .cvsignore  Makefile.am  RTjpeg.c  RTjpeg.h  format.c  format.h  pnm2rtj.c  rtjshow.c
mjpeg_play/: .cvsignore  AUTHORS  BUGS  CHANGES  ChangeLog  HINTS  INSTALL  INSTALL.real  Makefile  Makefile.am  Makefile.in  NEWS  PLANS  README  README.AltiVec  README.DV  README.glav  README.lavpipe  README.libforms  README.transist  REQUIRED_SOFTWARE  TODO  acconfig.h  acinclude.m4  aclocal.m4  audiolib.c  autogen.sh  configure  configure.ac  configure.in  cpuinfo.sh  editlist.c  lav2wav.c  lav2yuv.c  lav_io.c  lav_io.h  lavplay.c  lavrec.c  lavvideo.c  mjpeg_howto.txt  (+9 more)
mjpeg_play/aenc/: .cvsignore  Makefile  Makefile.am  README  common.c  common.h  encode.c  encoder.h  fft.c  musicin.c  psy.c  subs.c  tables.c  tonal.c  wav_io.c  wav_io.h
mjpeg_play/attic/: motion.c
mjpeg_play/debian/: .cvsignore  Makefile.am  changelog  control  control.in  libmjpegtools-dev.files  mjpegtools.postinst  mjpegtools.prerm  rules
mjpeg_play/docs/: FAQ.txt  Makefile.am  divxdec.1  img2mpg.1  install-info.sh  jpeg2yuv.1  lav2divx.1  lav2mpeg.1  lav2wav.1  lav2yuv.1  lavpipe.1  lavplay.1  lavrec.1  lavtools.sgml  lavtrans.1  mjpeg-howto.info  mjpeg-howto.info-1  mjpeg-howto.info-2  mjpeg-howto.info-3  mjpegtools.1  mp2enc.1  mpeg2enc.1  mplex.1  pgmtoy4m.1  png2yuv.1  pnmtoy4m.1  ppmtoy4m.1  uninstall-info.sh  xlav.1  y4mcolorbars.1  y4mdenoise.1  y4mtopnm.1  y4mtoppm.1  yuv2divx.1  yuv2lav.1  yuv4mpeg.5  yuvdenoise.1  yuvfps.1  yuvinactive.1  yuvkineco.1  (+4 more)
mjpeg_play/lavtools/: .cvsignore  Makefile.am  audiolib.c  audiolib.h  avilib.c  avilib.h  colorspace.c  colorspace.h  divxdec.cpp  editlist.c  editlist.h  frequencies.c  frequencies.h  glav.c  glav.h  glav_main.c  jpeg2yuv.c  jpegutils.c  jpegutils.h  lav2dfilter.c  lav2divx.cpp  lav2wav.c  lav2wav.h  lav2yuv.c  lav_common.c  lav_common.h  lav_io.c  lav_io.h  lavaddwav.c  lavinfo.c  lavpipe.c  lavplay.c  lavrec.c  lavtrans.c  lavvideo.c  libavifile.h  liblavplay.c  liblavplay.h  liblavrec.c  liblavrec.h  (+51 more)
mjpeg_play/mpeg2enc/: .cvsignore  ChangeLog  INSTALL  Makefile  Makefile.am  NOTES  README  TODO  bdist2_mmx.s  channel.hh  config.h  conform.c  conform.cc  cpu_accel.c  cpuid.s  dist1_00.s  dist1_00_mmx.s  dist1_01.s  dist1_01_mmx.s  dist1_10.s  dist1_10_mmx.s  dist1_11.s  dist1_11_mmx.s  dist1_mmx.s  dist2_mmx.s  elemstrmwriter.cc  elemstrmwriter.hh  encoderparams.cc  encoderparams.hh  encodertypes.h  fastintfns.h  fdct.c  fdct_mmx.c  fdct_mmx.s  fdct_x86.c  fdctdata.c  fdctref.c  fdctref.cc  fdist1_00.s  fdist1_mmx.s  (+102 more)
mjpeg_play/mplex/: InElemStream.hh  Makefile  Makefile.am  README  TODO  ac3strm_in.cc  ac3strm_in.cpp  audiostrm.hh  audiostrm.hpp  audiostrm_in.cc  audiostrm_out.cc  audiostrm_out.cpp  aunit.hh  aunit.hpp  aunitbuffer.hpp  bits.c  bits.cc  bits.cpp  bits.h  bits.hh  bits.hpp  bitstrm.c  bitstrm.h  buffer.c  buffer.cc  buffer.cpp  buffer.hh  buffer.hpp  decodebufmodel.hpp  dtsstrm_in.cpp  inits.c  inits.cc  inptstrm.c  inptstrm.cc  inputstrm.cc  inputstrm.cpp  inputstrm.hh  inputstrm.hpp  interact.c  interact.cc  (+59 more)
mjpeg_play/scripts/: Makefile.am  anytovcd.sh  aufnahme  avi2mpeg  berechne  codiere  frameber  img2mpg  lav2mpeg  lavtc.sh  linkmpeg  mpegtranscode  transcode
mjpeg_play/utils/: .cvsignore  Makefile  Makefile.am  cpu_accel.c  cpu_accel.h  cpuinfo.c  dist2_mmx.s  fastintfns.h  format_codes.h  lavaddwav.c  lavtrans.c  mblock_sad_mmx.s  mblock_sad_mmxe.s  mblock_sub44_sads_x86.c  mblock_sub44_sads_x86_h.c  mblock_sumsq_mmx.s  mjpeg_logging.c  mjpeg_logging.h  mjpeg_simd_helper.c  mjpeg_types.h  mmx.h  motionsearch.c  motionsearch.h  mpegconsts.c  mpegconsts.h  yuv4mpeg.c  yuv4mpeg.h  yuv4mpeg_intern.h  yuv4mpeg_ratio.c
mjpeg_play/y4mdenoise/: .cvsignore  Allocator.hh  BitmapRegion2D.hh  Makefile  Makefile.am  MotionSearcher.hh  ReferenceFrame.hh  Region2D.hh  SearchBorder.hh  SearchWindow.hh  Set.hh  SetRegion2D.hh  SkipList.hh  Vector.hh  implementation.html  main.c  newdenoise.cc  newdenoise.hh
mjpeg_play/y4mscaler/: .cvsignore  Makefile  Makefile.in
mjpeg_play/y4munsharp/: Makefile.am  y4munsharp.c
mjpeg_play/y4mutils/: .cvsignore  Makefile.am  pgmtoy4m.c  qttoy4m.c  y4mblack.c  y4mhist.c  y4minterlace.c  y4mivtc.c  y4mshift.c  y4mspatialfilter.c  y4mtoqt.c  y4mtoyuv.c  yuv4mpeg.c  yuvmedianfilter.c  yuyvtoy4m.c
mjpeg_play/yuvcorrect/: yuvcorrect.c
mjpeg_play/yuvdeinterlace/: Makefile  Makefile.am  blend_fields.c  blend_fields.h  copy_frame.c  copy_frame.h  interleave.c  interleave.h  main.c  motionsearch_deint.c  motionsearch_deint.h  sinc_interpolation.c  sinc_interpolation.h  transform_block.c  transform_block.h  vector.h  (+1 more)
studio/: AUTHORS  ChangeLog  ChangeLog.stv  INSTALL  INSTALL.stv  Makefile.am  NEWS  README  README.stv  TODO  acconfig.h  autogen.sh  configure.in  linuxvideostudio.spec.in
vcdimager/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  THANKS  TODO  aclocal.m4  configure  configure.in  vcdimager.spec  vcdimager.spec.in
video-gimp/: MAIL  Makefile  Makefile.am  Makefile.in  README.gap_qt  TODO  acconfig.h  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.in  gap_arr_dialog.c  gap_dbbrowser_utils.c  gap_decode_mpeg2_main.c  gap_decode_xanim.c  gap_filter_foreach.c  gap_filter_main.c  gap_frontends_main.c  gap_lib.c  gap_main.c  gap_mod_layer.c  gap_mov_dialog.c  gap_mov_exec.c  gap_mpege.c  gap_navigator_dialog.c  gap_range_ops.c  gap_resi_dialog.c  gap_split.c  resize.c  stdplugins-intl.h
(+514 files in other folders)
