dnl Process this file with autoconf to produce a configure script.
AC_INIT(movtar.c)

AM_INIT_AUTOMAKE(libmovtar,0.1.1)

AM_MAINTAINER_MODE

prefix=/usr/local

dnl Check for GLib
AM_PATH_GLIB(1.2.0, , AC_MSG_ERROR("You need to install GLib - you can find it on http://www.gtk.org"))

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_DEFINE(RESULTS,"libmovtar.a movtar_split movtar_unify movtar_yuv422 movtar_index movtar_setinfo")

AC_SUBST(SDL)
AC_SUBST(MOVTAR_PLAY)
dnl Check for SDL
AM_PATH_SDL(1.1.3, have_SDL="yes" SDL="-lSDL -lpthread" MOVTAR_PLAY="movtar_play")

AC_SUBST(JPEG)
JPEG=""
if test "$enable_jpeg" != "no"; then
    AC_CHECK_LIB(jpeg, jpeg_start_compress,AC_DEFINE(HAVE_LIBJPEG) JPEG="-ljpeg" have_jpeg="yes",,)
else
    echo "*** jpeg disabled"
    have_jpeg="no"
fi

AC_OUTPUT(Makefile
	movtar-config)

echo ""
echo " libmovtar ${VERSION} build configuration :"
echo ""
echo "    - Build movtar_play     : ${have_SDL}"
echo "    - JPEG input in      : ${have_jpeg}"
echo ""





