dnl Process this file with autoconf to produce a configure script.
AC_INIT(movtar.c)
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(libmovtar,0.1.3)

AM_MAINTAINER_MODE

ac_default_prefix=/usr/local

dnl Check for GLib
AM_PATH_GLIB(1.2.0, , AC_MSG_ERROR("You need to install GLib - you can find it on http://www.gtk.org"))

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_C_BIGENDIAN
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_DEFINE(RESULTS,"libmovtar.a movtar_split movtar_unify movtar_yuv422 movtar_index movtar_setinfo")

AC_SUBST(SDL_LIBS)
AC_SUBST(SDL_INCLUDE)
AC_SUBST(MOVTAR_PLAY)
dnl Check for SDL
AC_PATH_PROG(SDL_CONFIG, sdl-config, no)
if test x$SDL_CONFIG != xno; then
  AM_PATH_SDL(1.1.3, [ have_SDL="yes" SDL_LIBS="`$SDL_CONFIG --libs`" SDL_INCLUDE="`$SDL_CONFIG --cflags`" MOVTAR_PLAY="movtar_play" ])
fi

dnl AC_SUBST(M4DATADIR)
dnl AC_ARG_WITH(m4data-prefix, [  --with-m4data-prefix=PFX  Where to put the libmovtar.m4 for autoconf [/usr/share/aclocal] ], 
dnl    M4DATADIR="$withval/aclocal", 
dnl    M4DATADIR="/usr/share/aclocal")

dnl madmac/gernot: This activates architecture specific changes (e g no MMX)
case "$HOSTTYPE" in
  mips*) 
   echo Activating IRIX changes !
   CFLAGS="$CFLAGS -DIRIX -DWORD_BIGENDIAN";;
  i?86*) 
   echo Activating Intel MMX !
   RTJPEG_MMX="-DMMX";;
esac

dnl madmac/gernot: 
if test -r rtjpeg
then
  CFLAGS="$CFLAGS -DRTJPEG"  
  RTJPEG_INCLUDE="-Irtjpeg"  
  RTJPEG_OBJS="./rtjpeg/RTjpeg.o"
  have_rtjpeg="yes"
else
  RTJPEG_OBJS=
  RTJPEG_INCLUDE=
  echo "No RTJPEG codec found"
  have_rtjpeg="no"
fi

AC_SUBST(RTJPEG_OBJS)
AC_SUBST(RTJPEG_INCLUDE)
AC_SUBST(RTJPEG_MMX)

dnl No jpeg yet... try for a local jpeg-mmx first!
dnl -- Quicktime checks --

if test -r ../jpeg-mmx
then
  DEFAULT_JPEGDIR=`pwd`/../jpeg-mmx
else
  if test -r /usr/local/src/jpeg-mmx
  then
    DEFAULT_JPEGDIR=/usr/local/src/jpeg-mmx
  else
    if test -r /usr/local/lib/libjpeg-mmx.a
    then
      DEFAULT_JPEGDIR_I=/usr/local/include
      DEFAULT_JPEGDIR_L=/usr/local/lib
    else
      echo "No JPEG-MMX lib found"
    fi
  fi
fi

AC_ARG_WITH(jpeg-mmx, [  --with-jpeg-mmx=PFX  Where to find the jpeg-mmx source dir [../jpeg-mmx:/usr/local/src/jpeg-mmx:/usr/local/lib] ], 
    JPEGDIR="$withval", 
    JPEGDIR="$DEFAULT_JPEGDIR")

OLDLIBS="$LIBS"
LIBS="-L $JPEGDIR $DEFAULT_JPEGDIR_L $LIBS"
AC_SUBST(JPEG_INCLUDE)
AC_SUBST(JPEG_LIBS)

AC_CHECK_LIB( jpeg-mmx, jpeg_start_compress,
             	[	 
  			   		have_jpeg="yes"
					JPEG_LIBS="$LIBS -ljpeg-mmx"
					JPEG_INCLUDE="-I $JPEGDIR $DEFAULT_JPEGDIR_I"
 		     	],
             	[
             		have_jpeg="no"
					LIBS=$OLDLIBS
					JPEG_INCLUDE=""
		     	]
			)

dnl If that can't be found fall back to the system jpeg lib...
if test ${have_jpeg} = "no"
then
AC_CHECK_LIB( jpeg, jpeg_start_compress,
             	[	 
  			   		have_jpeg="yes"
					LIBS="$OLDLIBS"
					JPEG_LIBS="$LIBS -ljpeg"
					JPEG_INCLUDE=""
 		     	],
             	[
             		have_jpeg="no"
		     	]
			)
fi

AC_OUTPUT(Makefile rtjpeg/Makefile 
	movtar-config)

echo ""
echo " libmovtar ${VERSION} build configuration :"
echo ""
echo "    - Build movtar_play     : ${have_SDL}"
echo "    - JPEG input in      : ${have_jpeg}"
echo "    - RTJPEG support      : ${have_rtjpeg}"
echo ""





